2009-01-14  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* arc/action.c (action_presentation): Handling the new "z"-key for
	saving positions.
	
	* src/actions.h: likewise for the prototypes
	
	* src/callbacks.c (cb_presentation): fork+exec new instance of gv in
	presentation mode
	
        * src/callbacks.h: Likewise for the prototypes.
	
	* src/gv_misc_res.dat: Add handling for Shift P key
	
	* src/main.c: Add event handlers for GV_Presentation.
	
	* src/main_globals.h: Add Widget "presentationEntry". 
	
	* src/misc.c: Set Sensitivity of new "saveposEntry".

2009-01-13  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/scrollbar.c(MoveThumb):  Improve usability
	
	* src/callbacks.c(cb_newtocScrollbar) src/FileSel.c(cb_scroll): Rouning
	position to integer instead of using implicitly the floor function.

2009-01-12  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/callbacks.c(cb_newtocVisibleAdjust): Use VlistVisibleLength to
	  calculate visible area.

	* src/scrollbar.c(MoveThumb): New calculation of TOP, the actual
	  relative position of the scrollbar.
	  
	* src/scrollbar.c(GetRelativeThumbLocation): Adjusted to fit to
	  MoveThumb.
	  
	* src/callbacks.c(cb_newtocScrollbar): Just scroll one position less
	  than calculated, but at least one. This should help to ensure that
	  every page is reachable by this mechanism.

2009-01-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/FileSel.c: Bugfixed

2009-01-01  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/Vlist.c: Fix a regression from prev. patch: The scroll arrows
	on the page panel did not work any more.
	
	* src/FileSel.c: Changed in order to benefit from the changes in Vlist
	to support large lists.

2009-01-01  Bernhard R. Link <brlink@debian.org>

	* src/Vlist.c, src/Vlist.h, VlistP.h: support large lists (big change!)
	
	* src/actions.c, src/callbacks.c, src/main.c, src/misc.c:
	Changed in order to benefit from the change above.

