@@ -1415,11 +1415,11 @@ static void MoveThumb (w, event, params, num_params)
 
    if (SCROLLMODE != CONTINUOUS) {
        if ((position < TOPLOC) || (position >= TOPLOC + SHOWNLENGTH)) {
-         TOP = PUT_IN_RANGE(0.0,((float)(position-tosr))/losr, 1.0-0*SHOWN);
+         TOP = PUT_IN_RANGE(0.0,((float)(position-tosr))/losr, 1.0-SHOWN);
         }
       SCROLLMODE=CONTINUOUS;
    } else {
-      TOP = PUT_IN_RANGE(0.0,TOP+((float)(position-old_position))/losr, 1.0-0*SHOWN);
+      TOP = PUT_IN_RANGE(0.0,TOP+((float)(position-old_position))/losr, 1.0-SHOWN);
    }
    old_position = position;
    PaintThumb(SBW);
