@@ -1,3 +1,12 @@
+2009-01-15  Markus Steinborn <gnugv_maintainer@yahoo.de>
+
+	* src/actions.c(action_shellConfigureNotify): Set Thumnb size of
+	scrollbar on resize event.
+
+2009-01-15  Bernhard R. Link <brlink@debian.org>
+
+	* src/misc.c(setup_ghostview): Set Thumnb size of scrollbar.
+
 2009-01-14  Markus Steinborn <gnugv_maintainer@yahoo.de>
 
 	* arc/action.c (action_presentation): Handling the new "z"-key for
